# Auto-Suture-Pad-Analysis

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.api  Dockerfile.ml  README.md  api_requirement.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  suture-analysis-api-specification.yaml
.42c/: conf.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: requirements.txt  run.py
backend/app/: README.md
config/: api.yaml  config.yaml  environment.yaml  inference_config.yaml  ml.yaml  monitoring_config.yaml  training_config.yaml
config/api/: .env.example  config.yaml
config/deployment/: config.yaml
config/ml/: config.yaml
data/: README.md
docker/api/: Dockerfile
docker/frontend/: Dockerfile
docker/ml/: Dockerfile
docs/: README.md  Suture Analysis System_ Structured Documentation.docx  api.md  ml.md  progress_report.md  suture_analysis_documentation.md  workflow.md
frontend/: README.md
frontend/src/: index.js
ml-models/: README.md  __init__.py  config.py  requirements.txt
ml-models/deployment/: README.md
ml-models/evaluation/: README.md  __init__.py  evaluator.py  validation.py
ml-models/experiments/: README.md
ml-models/inference/: __init__.py  detect.py  infer.py  visualize_predictions.py
ml-models/models/: README.md  __init__.py
ml-models/monitoring/: README.md
ml-models/preprocessing/: README.md  (+2 more)
old/: README.md
scripts/: README.md  main.ipynb  visualize_results.py
tests/: README.md  conftest.py  test_api.py  test_config.py  test_logging.py  test_ml.py
(+116 files in other folders)
