[build-system]
requires = ["setuptools>=45", "wheel", "pip>=21"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-suture-pad"
version = "0.1.0"
description = "A computer vision-based system for analyzing surgical sutures"
authors = [
    {name = "University of Arizona"}
]
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.pylint]
max-line-length = 88
disable = ["C0111", "C0103"]